update country information retrieving